fix: alterando esrutura de arquitetura para MVC

--- a/views/index.html
+++ b/views/index.html
@@ -38,5 +38,5 @@
   </body>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="./js/home.js"></script>
+  <script src="../controllers/home.js"></script>
 </html>
